--- a/blocks/avatar/avatar.css
+++ b/blocks/avatar/avatar.css
@@ -5,4 +5,10 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  cursor: pointer;
+  transition: opacity 0.3s linear;
+}
+
+.avatar:hover {
+  opacity: 0.7;
 }
