--- a/pages/index.css
+++ b/pages/index.css
@@ -20,3 +20,8 @@
 @import url(../blocks/info/__link/info__link.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__wrap/popup__wrap.css);
+@import url(../blocks/popup/__avatar/popup__avatar.css);
+@import  url(../blocks/popup/__close-button/popup__close-button.css)
