--- a/blocks/info/__list/info__list.css
+++ b/blocks/info/__list/info__list.css
@@ -2,7 +2,7 @@
   list-style: none;
   padding: 0;
   font-style: normal;
-  color:#385f71;
+  color:#062b3b;
   line-height: 20px;
   font-size: 16px;
   font-weight: 400;
