--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,6 +3,7 @@
   max-width: 900px;
   min-height: 50px;
   margin: 0 auto;
+  margin-bottom: -60px;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
