--- a/blocks/info/info.css
+++ b/blocks/info/info.css
@@ -1,7 +1,7 @@
 .info {
   max-width: 600px;
   min-height: 350px;
-  margin: 0 auto;
+  margin: 50px auto 50px;
   display: flex;
   flex-direction: column;
   padding: 0 25px 0 25px;
