Sticky for div added

--- a/pages/index.css
+++ b/pages/index.css
@@ -29,3 +29,4 @@
 @import url(../blocks/popup/__avatar/popup__avatar.css);
 @import  url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/skills/__card/skills__card.css);
